implement shutdown
